<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2016. Dmytro Karataiev
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.jaschke.alexandria.AddBook">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|top"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/eancontainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_add_book"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_hint"
                android:inputType="number"
                android:maxLength="@integer/ean_size"
                android:maxLines="1"
                android:minEms="@integer/ean_width"
                android:paddingRight="@dimen/margin_add_book"
                android:paddingEnd="@dimen/margin_add_book"
                android:paddingStart="@dimen/margin_add_book"
                android:paddingLeft="@dimen/margin_add_book"
                android:saveEnabled="true" />

            <Button
                android:id="@+id/scan_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_button" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/testBarcode"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignLeft="@+id/eancontainer"
            android:layout_alignStart="@+id/eancontainer"
            android:layout_below="@+id/eancontainer"
            android:keepScreenOn="true"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignEnd="@id/eancontainer"
            android:layout_alignLeft="@+id/eancontainer"
            android:layout_alignRight="@id/eancontainer"
            android:layout_alignStart="@+id/eancontainer"
            android:layout_below="@id/testBarcode"
            android:keepScreenOn="true"
            android:orientation="vertical"
            android:padding="@dimen/standard_padding">

            <it.jaschke.alexandria.CameraPreview.CameraSourcePreview
                android:id="@+id/preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <it.jaschke.alexandria.CameraPreview.GraphicOverlay
                    android:id="@+id/overlay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </it.jaschke.alexandria.CameraPreview.CameraSourcePreview>

        </LinearLayout>

        <TextView
            android:id="@+id/bookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/eancontainer"
            android:layout_alignStart="@+id/eancontainer"
            android:layout_below="@+id/testBarcode"
            android:layout_marginTop="@dimen/margin_top_bigger"
            android:paddingRight="@dimen/padding_add_book"
            android:paddingEnd="@dimen/padding_add_book"
            android:paddingLeft="@dimen/padding_add_book"
            android:paddingStart="@dimen/padding_add_book"
            android:textIsSelectable="true"
            android:textSize="@dimen/head_line"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bookSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/eancontainer"
            android:layout_alignStart="@+id/eancontainer"
            android:layout_below="@+id/bookTitle"
            android:layout_marginTop="@dimen/margin_add_book_small"
            android:ellipsize="end"
            android:maxLines="3" />

        <TextView
            android:id="@+id/authors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/eancontainer"
            android:layout_alignRight="@+id/eancontainer"
            android:layout_below="@+id/bookSubTitle"
            android:layout_marginTop="@dimen/margin_add_book"
            android:gravity="end"
            android:textSize="@dimen/small_fontsize" />

        <ImageView
            android:id="@+id/bookCover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/eancontainer"
            android:layout_alignStart="@+id/eancontainer"
            android:layout_alignTop="@+id/authors"
            android:contentDescription="@string/book_cover" />

        <TextView
            android:id="@+id/categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/eancontainer"
            android:layout_alignStart="@+id/eancontainer"
            android:layout_below="@+id/bookCover"
            android:layout_marginTop="@dimen/margin_add_book"
            android:textSize="@dimen/small_fontsize" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/buttons_height"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/delete_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_discard"
                android:drawableStart="@drawable/ic_action_discard"
                android:text="@string/cancel_button"
                android:visibility="invisible" />

            <Button
                android:id="@+id/save_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_accept"
                android:drawableStart="@drawable/ic_action_accept"
                android:text="@string/ok_button"
                android:visibility="invisible" />

        </LinearLayout>

    </RelativeLayout>
</FrameLayout>
